<resources>
    <string name="app_name">TS9.MAJ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ETIT">електро техничар информационих технологија</string>
    <string name="ARM">администратор рачунарских мрежа</string>
    <string name="TM">техничар мултимедије</string>
    <string name="TZKUM">техничар за компјутерско управљање (cnc) машина</string>
    <string name="EOIE">електротехничар обновљивих извора енергије</string>
    <string name="MMV">механичар моторних возила</string>
    <string name="BZ">бравар - заваривач</string>
</resources>