<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/etit"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:width="329dp"
        android:background="#00FFFFFF"
        android:text="@string/ETIT"
        android:textColor="#00FFE1"
        android:textSize="15dp"
        app:icon="@drawable/etit"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconTint="#00FFE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/arm"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="170dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/ARM"
        android:textColor="#00FFE1"
        android:textSize="13dp"
        app:icon="@drawable/arm"
        app:iconGravity="textTop"
        app:iconPadding="5dp"
        app:iconTint="#00FFE1"
        app:layout_constraintBottom_toTopOf="@+id/eoie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mmv"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="580dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/MMV"
        android:textColor="#C145EF"
        android:textSize="15dp"
        app:icon="@drawable/mmv"
        app:iconGravity="textTop"
        app:iconPadding="6dp"
        app:iconTint="#C145EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/eoie"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="368dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/EOIE"
        android:textColor="#00FFE1"
        android:textSize="13dp"
        app:icon="@drawable/eoie"
        app:iconGravity="textTop"
        app:iconPadding="25dp"
        app:iconTint="#00FFE1"
        app:layout_constraintBottom_toTopOf="@+id/mmv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tm"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="170dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/TM"
        android:textColor="#00FFE1"
        android:textSize="15dp"
        app:icon="@drawable/tm"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconTint="#00FFE1"
        app:layout_constraintBottom_toTopOf="@+id/tzkum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tzkum"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="368dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/TZKUM"
        android:textColor="#9BFD55"
        android:textSize="13dp"
        app:icon="@drawable/tzkum"
        app:iconGravity="textTop"
        app:iconPadding="10dp"
        app:iconTint="#9BFD55"
        app:layout_constraintBottom_toTopOf="@+id/bz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bz"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="580dp"
        android:width="150dp"
        android:height="50dp"
        android:background="#00FFFFFF"
        android:text="@string/BZ"
        android:textColor="#C145EF"
        android:textSize="15dp"
        app:icon="@drawable/bz"
        app:iconGravity="textTop"
        app:iconPadding="22dp"
        app:iconTint="#C145EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etit"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>